2010-06-15  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, attribute.cs: Enable generic type parameters
	attribute check.
	
2010-06-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #612146
	* generic.cs: Don't use fixed array for inflated type parameter
	interface constraints.
	
2010-06-15  Marek Safar  <marek.safar@gmail.com>

	* typespec.cs: ElementTypeSpec has to use its own ITypeDefinition.
	
	* report.cs: Unwrap elements for related symbols reporting.

2010-06-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #612796
	* cs-tokenizer.cs: Offset correctly keywords the first character
	comparison.
	
2010-06-15  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #613397
	* expression.cs: Removed too aggressive object initializers
	optimization.
	
2010-06-15  Marek Safar  <marek.safar@gmail.com>
	
	* parameter.cs, property.cs, membercache.cs, decl.cs, iterators.cs,
	anonymous.cs, expression.cs, support.cs, method.cs, pending.cs,
	class.cs, cs-parser.jay: Simplify parsing of accessors by removing
	any intermediate steps and fake nodes, also saves few MBs of memory.

2010-06-11  Marek Safar  <marek.safar@gmail.com>
	
	* modifiers.cs, rootcontext.cs, location.cs, cs-parser.jay: More
	precise modifiers parsing.

2010-06-09  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs, anonymous.cs, expression.cs, cs-parser.jay:
	Fixed few shift/reduce conflicts.

2010-06-09  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, parameter.cs, dynamic.cs, typespec.cs,
	expression.cs, ecore.cs, cs-parser.jay: Fully parse composed type
	specifiers and stop using string in AST.

2010-06-07  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, eval.cs, iterators.cs, anonymous.cs, expression.cs
	method.cs, class.cs, delegate.cs, cs-parser.jay, driver.cs, visit.cs
	enum.cs: Hold location of predefined types.

2010-06-07  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #610878
	* pending.cs: Clone cached list before modifying.
